Forma de pagamento

--- a/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/forma-pagamento-config/forma-pagamento-config.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/forma-pagamento-config/forma-pagamento-config.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 
 </ion-header>
-<ion-content padding class="content-desktop">
+<ion-content class="content-desktop">
   <div>
       <ion-toolbar>
         <ion-title>Tipos de Pagamento</ion-title>
@@ -33,5 +33,5 @@
         </ion-item-options>
       </ion-item-sliding>
     </ion-list>
-  </ion-card>
+  </div>
 </ion-content>
