--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.html
@@ -128,7 +128,7 @@
                   <img *ngIf="formaPagamento.pag_tipos[key].tipopag_img" [src]="formaPagamento.pag_tipos[key].tipopag_img">
                 </ion-avatar>
                 <ion-label>{{formaPagamento.pag_tipos[key].tipopag_descricao}}</ion-label>                
-                <ion-checkbox [(ngModel)]="formaPagamento.pag_tipos[key]._selecionado" (ngModelChange)="changeTipoPagamento($event, iTipo, iForma)" ></ion-checkbox>
+                <ion-checkbox [(ngModel)]="formaPagamento.pag_tipos[key]._selecionado" (ngModelChange)="changeTipoPagamento($event, iTipo, iForma, key )" ></ion-checkbox>
               </ion-item>
             </ion-list>
           </div>
