Iniciando Acompanhamento de Pedidos

--- a/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/formas-pagamento.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/formas-pagamento/formas-pagamento.html
@@ -24,10 +24,10 @@
           <ion-icon name="trash"></ion-icon>
           Excluir
         </button>
-        <button ion-button color="dark" (click)="configurarFormaPagamento(formaPagamento)">
+        <!-- <button ion-button color="dark" (click)="configurarFormaPagamento(formaPagamento)">
           <ion-icon name="settings"></ion-icon>
           Configurar
-        </button>
+        </button> -->
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
