--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-distribuidor/painel-controle-distribuidor-config/painel-controle-distribuidor-config.html
@@ -94,6 +94,11 @@
           <ion-card-header>
             <ion-toolbar>
               <h2>Funcionários</h2>
+              <ion-buttons end>
+                  <button ion-button clear icon-only color="primary" (click)="adicionarFuncionario()">
+                    <ion-icon name="add-circle"></ion-icon>
+                  </button>
+                </ion-buttons>                
             </ion-toolbar>
           </ion-card-header>
           <ion-card-content>
