--- a/src/pages/painel-distribuidor/painel-distribuidor.html
+++ b/src/pages/painel-distribuidor/painel-distribuidor.html
@@ -1,13 +1,16 @@
-<ion-header class="content-desktop">
-    
-      <ion-navbar>
-        <ion-title>Painel do Distribuidor - {{distribuidor?.dist_nome}}</ion-title>
-      </ion-navbar>
-    
-    </ion-header>
-    <ion-content class="tab-desktop">
-      <ion-tabs #tab color="customColor1" selectedIndex="0" *ngIf='distribuidor'>
-        <ion-tab tabIcon="settings" tabTitle="Meus Dados" [root]="painelDistribuidorConfigPage" [rootParams]='distribuidor'></ion-tab>
-        <ion-tab tabIcon="bookmark" tabTitle="Catálogo" [root]="catalogoProdutoDistribuidorPage" [rootParams]='distribuidor'></ion-tab>
-      </ion-tabs>
-    </ion-content>
+<ion-header class="content-desktop" *ngIf="usuarioSrvc.usuarioAtual.usr_distribuidores.length > 0">  
+  <ion-navbar>
+    <ion-title>Painel do Distribuidor - {{distribuidor?.dist_nome}}</ion-title>
+  </ion-navbar> 
+</ion-header>
+<ion-content class="tab-desktop">
+  <ion-tabs #tab color="customColor1" selectedIndex="0" *ngIf="distribuidor && usuarioSrvc.usuarioAtual.usr_distribuidores.length > 0">
+      <ion-tab tabIcon="cart" tabTitle="Pedidos" [root]="pedidosDistribuidorPage" [rootParams]='distribuidor'></ion-tab>      
+      <ion-tab tabIcon="bookmark" tabTitle="Catálogo" [root]="catalogoProdutoDistribuidorPage" [rootParams]='distribuidor'></ion-tab>
+      <ion-tab tabIcon="settings" tabTitle="Meus Dados" [root]="painelDistribuidorConfigPage" [rootParams]='distribuidor'></ion-tab>
+  </ion-tabs>
+  <div class="tab-desktop" *ngIf="usuarioSrvc.usuarioAtual.usr_distribuidores.length == 0">
+      <br><br><br><br><br><br><br><br><br><br>
+      Você não possui acesso a esta funcionalidade
+  </div>
+</ion-content>
