--- a/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-ditstribuidor-evoluir/detalhes-pedido-distribuidor/detalhes-pedido-distribuidor.html
+++ b/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-ditstribuidor-evoluir/detalhes-pedido-distribuidor/detalhes-pedido-distribuidor.html
@@ -5,24 +5,28 @@
 
   <ion-navbar icon-only>
     <ion-item no-margin no-lines>
-      <ion-thumbnail item-start>
-        <img *ngIf="!pedido" src="assets/img/appicon.png">
-        <img *ngIf="pedido" [src]="pedido.distribuidor.dist_img">
-      </ion-thumbnail>
-      <h2> {{ pedido.distribuidor.dist_nome }} </h2>
-      <p> {{ pedido.distribuidor.dist_endereco.bairro }}</p>
-      <p text-right>
-        <span *ngIf=' pedido.distribuidor.dist_distancia_text'> {{ pedido.distribuidor.dist_distancia_text }} - {{ pedido.distribuidor.dist_duracao_text }}
-        </span>
+      <ion-avatar item-start>
+        <img *ngIf="pedido.usuario.usr_fb_foto" [src]="pedido.usuario.usr_fb_foto.data.url">
+      </ion-avatar>
+      <h2>{{pedido.usuario.usr_nome}}</h2>
+      <p text-no-wrap>
+        {{pedido.enderecoEntrega.rua + ', ' + pedido.enderecoEntrega.complemento + ', ' + pedido.enderecoEntrega.numero + ', ' +
+        pedido.enderecoEntrega.bairro + ', ' + pedido.enderecoEntrega.cidade + ', ' + pedido.enderecoEntrega.estado + ' -
+        ' + pedido.enderecoEntrega.cep}}
       </p>
+      <p text-right>Total do pedido:
+        <span ion-text color='customColor3'>R${{pedido.total}}</span>
+      </p>
+      <p text-right ion-text color='customColor1'>{{pedido.formaPagamento.pag_descricao}}</p>
+      <p text-right *ngIf="pedido.troco">Troco para R${{pedido.troco}}</p>
     </ion-item>
   </ion-navbar>
 </ion-header>
 <ion-content class="content-desktop " *ngIf='pedido'>
   <div class="content-desktop-margin-bottom">
-    <ion-list no-padding>
+    <ion-list no-padding no-margin>
       <ion-list-header *ngIf="pedido.entregador">
-        Ítens do Pedio
+        Ítens do Pedido
       </ion-list-header>
       <ion-item class="item-carrinho" *ngFor='let distribuidorProduto of pedido.produtos; let idx = index'>
         <ion-thumbnail item-start>
@@ -40,21 +44,27 @@
           <p ion-text color="customColor3">R$ {{distribuidorProduto.dist_total}}</p>
         </div>
       </ion-item>
+
       <ion-item>
         <p>Total Produtos</p>
         <div item-end>
           <p ion-text color="customColor3">R${{pedido.total - pedido.distribuidor.dist_taxa_entrega}}</p>
         </div>
       </ion-item>
-
       <ion-list-header *ngIf="pedido.entregador">
         Entregador
       </ion-list-header>
+
       <ion-item no-margin no-lines *ngIf="pedido.entregador ">
         <ion-avatar item-start>
           <img *ngIf="pedido.entregador.usr_fb_foto" [src]="pedido.entregador.usr_fb_foto.data.url">
         </ion-avatar>
         <h2>{{pedido.entregador.usr_nome}}</h2>
+        <button item-end ion-button outline icon-right color="customColor2" (click)="selecionarEntregador()">
+          Mudar
+          <ion-icon name="flag"></ion-icon>
+        </button>
+
       </ion-item>
 
       <ion-list-header *ngIf="pedido.entregador">
@@ -83,8 +93,14 @@
           <span text-center ion-text color="customColor1">{{pedido.formaPagamento.pag_descricao}} </span>
           <span text-center ion-text text-center *ngIf="pedido.troco"> (Troco para R$ {{pedido.troco}}) </span>
         </p>
-
-      </ion-item>
+      </ion-item>     
     </ion-list>
+    <div padding>
+        <button color="danger" ion-button block icon-right (click)="cancelarPedido()">
+          Cancelar Pedido
+          <ion-icon [name]="dicionarioStatusPedido[6].icon"></ion-icon>
+        </button>
+      </div>
+      
   </div>
 </ion-content>
