--- a/src/pages/painel-pedidos/meus-pedidos/meus-pedidos.html
+++ b/src/pages/painel-pedidos/meus-pedidos/meus-pedidos.html
@@ -14,6 +14,7 @@
           <img *ngIf="pedido.distribuidor.dist_img" [src]="pedido.distribuidor.dist_img">
         </ion-thumbnail>
         <h2>{{pedido.distribuidor.dist_nome}}</h2>
+        <p ion-text color='customColor2' text-right>{{dicionarioStatusPedido[pedido.status].status}}</p>
         <p text-right>Total do pedido: <span  ion-text color='customColor3'>R${{pedido.total}}</span></p>
         <p text-right ion-text color='customColor1'>{{pedido.formaPagamento.pag_descricao}}</p>
         <p text-right *ngIf="pedido.troco">Troco para R${{pedido.troco}}</p>
