--- a/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-distribuidor.html
+++ b/src/pages/painel-distribuidor/pedidos-distribuidor/pedidos-distribuidor.html
@@ -40,7 +40,7 @@
           </ion-item>
         </ion-list>
       </div>
-      <ion-card *ngSwitchCase="'Encerrados'">
+      <div *ngSwitchCase="'Encerrados'">
         <ion-list>
           <ion-item *ngFor='let pedido of pedidosEncerrados' (click)="evoluirPedido(pedido)">
             <ion-avatar item-start>
@@ -48,6 +48,7 @@
             </ion-avatar>
             <h2>{{pedido.usuario.usr_nome}}</h2>
             <p ion-text color='customColor2' text-right>{{dicionarioStatusPedido[pedido.status].status}}</p>
+            <p text-right> {{pedido.dataCriacao | amDateFormat: 'DD/MM/YYYY'}}</p>                        
             <p text-no-wrap>
               {{pedido.enderecoEntrega.rua + ', ' + pedido.enderecoEntrega.complemento + ', ' + pedido.enderecoEntrega.numero + ', ' +
               pedido.enderecoEntrega.bairro + ', ' + pedido.enderecoEntrega.cidade + ', ' + pedido.enderecoEntrega.estado
@@ -61,7 +62,7 @@
           </ion-item>
         </ion-list>
 
-      </ion-card>
+      </div>
     </div>
   </div>
 
